# redwrenlib

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/redwrenlib/: __init__.py
src/redwrenlib/dotgesture/: __init__.py  gesturefile.py
src/redwrenlib/dotgesture/version_reads/: _0_0_1.py  __init__.py
src/redwrenlib/typing/: __init__.py  aliases.py  gestures.py
src/redwrenlib/utils/: debug.py  defaults.py  errors.py
