[build-system]
requires =  ["hatchling", "scikit-learn", "numpy", "h5py", "colorama"]
build-backend = "hatchling.build"

[project]
name = "redwrenlib"
version = "0.1.1"
authors = [
    { name="Utkarsh Ranjan", email="utkarsh@cyberfear.com" }
]

description = "Python library for the RedWren ecosystem. Provides an interface for building applications, and extending functionality of the hardware."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://karsh.me/#/redwren"
Issues = "https://github.com/redwren/redwrenlib"

